<?xml version="1.0"?>
<package format="2">
  <name>custom_teleop</name>
  <version>0.0.0</version>
  <description>The custom_teleop package</description>
  <maintainer email="roctop1@todo.todo">roctop1</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>joy</depend>
</package>
